[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
sea-orm = { version = "0.11.3", features = [
    "sqlx-postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "with-time", 
    "debug-print", "with-json", "with-uuid", "with-chrono", "with-bigdecimal", "mock" 
] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid" ] }
tokio = { version = "1.28.1", features = ["full"] }
